# deepvoice

./: .gitignore  CONTRIBUTING.md  README.md  build.sh  learn.ipynb  pyproject.toml  setup.py
.github/workflows/: package.yml  python-publish.yml
deeptest/: TestDeepVoice.py  __main__.py
deepvoice/: DeepVoice.py  __init__.py  models.py
docs/: app.js  index.html  style.css
infra/: docker-compose.yml  local-compose.sh
infra/api/: Dockerfile
infra/celery/: Dockerfile
infra/redis/: Dockerfile
src/deepvoice/: DeepVoice.py  __init__.py  config.py
src/deepvoice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/deepvoiceapi/: __init__.py
src/deepvoicemq/: __init__.py
src/deepvoiceworker/: __init__.py
tests/: TestDeepVoice.py  TestEmotionExtraction.py  TestExtractVoices.py
tests/data/: dataset.sh
