[project]
name = "deepvoice"
version = "0.0.1"
authors = [
  { name="Yilmaz Mustafa", email="ymus@tuta.io" },
]
description = "Python package to process audio."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/codesapienbe/deepvoice"
Issues = "https://github.com/codesapienbe/deepvoice/issues"